--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -5,6 +6,11 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Goldman:wght@400;700&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Goldman:wght@400;700&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+      
+      </style>
   </head>
   <body>
     <div id="root"></div>
